--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,19 @@
 }
 
 body{
-    font-family: var(--primary-font-family);
-    color: var(--primary-text-color);
-    background-color: var(--primary-white-color);
-    font-size: 14px;
-    letter-spacing: 0.03em;
-
+font-family: var(--primary-font-family);
+color: var(--primary-text-color)
+background-color: var(--primay-white-color);
+font-size: 14px;
+ letter-spacing: 0.03em;
 }
 
 .link{
-    text-decoration: none;
+text-decoration: none;
 }
 
 .list{
-    list-style: none;
+list-style: none;
 }
 
 .hero-title{
@@ -52,7 +51,7 @@ color: var(--secondary-text-color);
     color: var(--accent-color);
 }
 
-/* ссылки */
+/* ссылки студия,портфолио,контакты,*/
 
 .nav-link{
 font-size: 14px;
@@ -65,6 +64,8 @@ color: var(--secondary-text-color);
   color: var(--accent-color);
 }
 
+/* емейл,телефон */
+
 .contact-link{
 font-size: 14px;
 line-height: 1.14;
@@ -75,4 +76,60 @@ color: #757575;
 
 .contact-link.current:hover,focus{
     color: var(--accent-color);
+}
+
+/* button */
+
+.button{
+    background: var(--accent-color);
+    color: var(--primary-white-color);
+}
+
+.hero{
+    background: #2F303A;
+}
+
+.hero-title{
+font-size: 44px;
+line-height: 1.36;
+letter-spacing: 0.06em;
+color: #ffffff;
+}
+
+/* секция  about */
+
+.about-subtitle{
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+color: #212121;   
+
+background-color: #ffffff;
+}
+
+/* секция наша команда */
+
+.team{
+background: #F5F4FA;
+}
+
+.team-subtitle{
+font-size: 16px;
+line-height: 1.18;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+/* footer */
+
+.footer{
+background: #2F303A;
+}
+
+.nav-link.item{
+color: #FFFFFF;    
+}
+
+.contact-link.list{
+color:rgba(255, 255, 255, 0.6);
 }
