--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@
 }
 
 body{
-font-family: var(--primary-font-family);
-color: var(--primary-text-color)
-background-color: var(--primay-white-color);
-font-size: 14px;
+ font-family: var(--primary-font-family);
+ color: var(--primary-text-color);
+ background-color: var(--primay-white-color);
+ font-size: 14px;
  letter-spacing: 0.03em;
 }
 
