--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
     --primary-white-color: #ffffff;
@@ -8,7 +8,7 @@
 
 }
 
-body{
+body {
  font-family: var(--primary-font-family);
  color: var(--primary-text-color);
  background-color: var(--primay-white-color);
@@ -16,15 +16,29 @@ body{
  letter-spacing: 0.03em;
 }
 
-.link{
+.link {
 text-decoration: none;
 }
 
-.list{
+.list {
 list-style: none;
 }
 
-.hero-title{
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+.hero-title {
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
@@ -32,7 +46,7 @@ color: var(--secondary-text-color);
 
 }
 
-.section-title{
+.section-title {
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
@@ -41,55 +55,54 @@ color: var(--secondary-text-color);
 }
 
 /* logo webstudio */
-.logo{
+.logo {
+font-family: var(--primary-font-family);    
 font-size: 26px;
 line-height: 1.19;
 color: var(--secondary-text-color);
+font-weight: 700;
 }
 
-.accent{ 
+.accent { 
     color: var(--accent-color);
 }
 
 /* ссылки студия,портфолио,контакты,*/
 
-.nav-link{
-font-size: 14px;
+.nav-link,
+.contact-link {
+font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--secondary-text-color);
 }
 
-.nav-link.current:hover,focus{
-  color: var(--accent-color);
+.nav-link:hover,
+.nav-link:focus,
+.contact-link:hover,
+.contact-link:focus,
+.current {
+    color: var(--accent-color);
 }
 
 /* емейл,телефон */
 
-.contact-link{
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-
-color: #757575;
-}
-
-.contact-link.current:hover,focus{
-    color: var(--accent-color);
+.contact-link {
+color: var(--primary-text-color);
 }
 
 /* button */
 
-.button{
+.button {
     background: var(--accent-color);
     color: var(--primary-white-color);
 }
 
-.hero{
+.hero {
     background: #2F303A;
 }
 
-.hero-title{
+.hero-title {
 font-size: 44px;
 line-height: 1.36;
 letter-spacing: 0.06em;
@@ -98,22 +111,25 @@ color: #ffffff;
 
 /* секция  about */
 
-.about-subtitle{
+.about-subtitle {
 font-size: 14px;
 line-height: 1.14;
-letter-spacing: 0.03em;
-color: #212121;   
+color: var(--secondary-text-color);
+font-weight: 700;
+text-transform: uppercase;
+}
 
-background-color: #ffffff;
+.about-description{
+    line-height: 1.71;
 }
 
 /* секция наша команда */
 
-.team{
+.team {
 background: #F5F4FA;
 }
 
-.team-subtitle{
+.team-subtitle {
 font-size: 16px;
 line-height: 1.18;
 letter-spacing: 0.03em;
@@ -122,14 +138,74 @@ color: #212121;
 
 /* footer */
 
-.footer{
+.footer {
 background: #2F303A;
 }
 
-.nav-link.item{
-color: #FFFFFF;    
+.footer .logo {
+color: var(--primary-white-color);
 }
 
-.contact-link.list{
+.adress-link {
+font-size: 14px;
+line-height: 1.71;
+color: var(--primary-white-color);
+}
+
+
+
+.footer .contact-link {
 color:rgba(255, 255, 255, 0.6);
+font-weight: 400;
+line-height: 1.71;
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.contact-link:hover,
+.contact-link:focus,
+.current {
+    color: var(--accent-color);
+}
+
+/* ПОРТФОЛИО */
+
+.portfolio-btn {
+font-family: 'Roboto';
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+
+
+background-color: #F5F4FA;
+border-radius: 4px;
+
+color: var(--secondary-text-color);
+cursor: pointer;
+border: none;
+padding: 6px 22px;
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+}
+
+.portfolio-btn.current {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+}
+
+.card-title {
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0,06em;
+    color: var(--secondary-text-color);
+}
+
+.card-desc {
+    font-size: 16px;
+    line-height: 1.88;
+    color: var(--primary-text-color);
 }
